Bug 1791365 - Don't copy invalid enum value in FFmpegVideoDecoder to avoid tripping UBSan. r=alwu

Differential Revision: https://phabricator.services.mozilla.com/D158381